--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,71 @@
 body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 90%;
+    background-color: rgb(249, 241, 221)
 }
 
 header {
-    background-color: rgb(215, 220, 220);
-}
+    background-color: rgb(208, 209, 209);
 
-header img {
-    margin-top: 20px;
 }
 
 nav {
-    background-color: rgb(116, 207, 207);
-    justify-content: center;
-    display: flex;
+  display: grid;
+  grid-template-columns: 70% 30%; /* link a sinistra, immagine a destra */
+  align-items: center;            /* centra verticalmente i contenuti */
+  background-color: rgb(208, 209, 209);    /* colore sfondo simile allo screenshot */
+  padding: 20px;
 }
 
-li {
+nav ul {
+  display: flex;                  /* i link diventano in riga */
+  justify-content: space-around;  /* spazio uniforme tra i link */
+  list-style-type: none;          /* toglie i pallini */
+  margin: 0;
+  padding: 0;
+}
+
+nav img {
+  width: 40%;       /* l’immagine occupa tutta la sua colonna */
+  height: auto;      /* mantiene le proporzioni */
+  display: block;;
+  justify-self: center;
+}
+
+.imgWalks {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    width: 70%;
+    padding-left: 15%;
+    gap: 10px;
+}
+
+.imgWalks img {
+    justify-content:space-around;
+    width: 100%;
+}
+
+/* li {
     display: inline;;
     margin-left: 30px;
     margin-right: 30px;
+} */
+
+a {
+    color: rgb(0, 0, 255);
 }
 
+a:hover{
+    color:rgb(152, 21, 164)
+}
+
+a:visited {
+    color:rgb(152, 21, 164)
+}
+
+a:active {
+    color:rgb(152, 21, 164)
+}
 
 h1 {
     color: rgb(38, 38, 146);
@@ -40,9 +83,24 @@ div {
     align-items: center;
 }
 
-footer {
-    background-color: rgb(215, 220, 220);
+main {
+    background-color: yellow;
 }
+
+.mainPark {
+    display: flex;
+    flex-direction: column;
+}
+
+.mainPark img {
+margin-left: 10px;
+}
+
+
+footer {
+    background-color: rgb(208, 209, 209);
+}
+
 
 p {
     line-height: 1.4;
